--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock, Paper, Scissors</title>
+  <script src="/public/js/script.js"></script>
   <link href="/public/css/style.css" rel="stylesheet" />
   <link rel="shortcut icon" href="#" />
 </head>
