Set-up basic structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="shortcut icon" href="#" />
 </head>
 <body>
-  Starting Text
+  <h1>Rock, Paper, Scissors</h1>
+  <button>Start</button>
+  <div class="my-selection">My Selection: <span id="my-selection-listing"></span></div>
+  <div class="comp-selection">Computer Selection: <span id="comp-selection-listing"></span></div>
+  <div class="winner">Winner: <span id="winner-listing"></span></div>
 </body>
 </html>
