--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>Rock, Paper, Scissors</h1>
-  <button>Start</button>
+  <button onclick="play()">Start</button>
   <div class="my-selection">My Selection: <span id="my-selection-listing"></span></div>
   <div class="comp-selection">Computer Selection: <span id="comp-selection-listing"></span></div>
   <div class="winner">Winner: <span id="winner-listing"></span></div>
